--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Broadway</title>
   </head>
   <body>
-    <h1>Discover hidden places in the world around you</h1>
+    <h1>Broadway Design</h1>
       <a href="https://un8dp8qjo2omcecegbj2bf59d8j41hp4toet087ba6n4qt174kug.codecademy.cloud/#" target="_blank">Download Excursion (Coming soon!)</a>
           <p><video controls autoplay loop>
           <source src="./resources/video/excursion.mp4" type="video/mp4">
