--- a/index.html
+++ b/index.html
@@ -5,17 +5,36 @@
     <title>Broadway</title>
   </head>
   <body>
-    <h1>Broadway Design</h1>
-      <a href="https://un8dp8qjo2omcecegbj2bf59d8j41hp4toet087ba6n4qt174kug.codecademy.cloud/#" target="_blank">Download Excursion (Coming soon!)</a>
-          <p><video controls autoplay loop>
-          <source src="./resources/video/excursion.mp4" type="video/mp4">
-          Your browser does not support the video tag.</video></p>
-    <h1 id="travelguide">Your personal travel guide</h1>
-          <p id="subtext">Excursion remembers places you like, and recommends new points of interest around you.</p>
-            <p><img src="./resources/images/camp.jpg"></p>
-                <p><img src="./resources/images/phone.png"></p>
-    <h1>Coming Soon for iPhone and Android</h1>
-      <a href="https://un8dp8qjo2omcecegbj2bf59d8j41hp4toet087ba6n4qt174kug.codecademy.cloud/#" target="_blank">Download Excursion (Coming soon!)</a>
-      <p id="copyright">&copy; Excursion</p>
+    <header class="bg-img">
+      <h1>Broadway Design</h1>
+        <a href="">Home</a><br/><br/>
+        <a href="">About</a><br/><br/>
+        <a href="">Work</a><br/><br/>
+        <a href="">Team</a><br/><br/>
+        <a href="">Contact</a>
+    </header>
+      <h2>Our Process</h2>
+        <h3>Identity</h3>
+          <p>We focus on the most important details.</p>
+        <h3>Understand</h3>
+          <p>We study our projects inside and out.</p>
+        <h3>Execute</h3>
+          <p>We put everything we have into our work.</p>
+    <div class="bg-img"><h2>Design in New York</h2></div>
+        <h3>Portfolio</h3>
+           <p>Coming Soon</p>
+        <h3>Team</h3>
+          <p>We're Hiring</p>
+        <h3>Contact</h3>
+          <p>Phone: (555)-555-5555<br/>E-mail: test@example.com<br/>Twitter: @test</p>
+    <footer>
+      <p><span id="copyright">Broadway 2017</span>
+              <a href="">Home</a>
+        <a href="">About</a>
+        <a href="">Work</a>
+        <a href="">Team</a>
+        <a href="">Contact</a>
+    </footer>
+
   </body>
 </html>
