--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <h3>Contact</h3>
           <p>Phone: (555)-555-5555<br/>E-mail: test@example.com<br/>Twitter: @test</p>
     <footer>
-      <p><span id="copyright">Broadway 2017</span>
+      <p><span id="copyright">&copy; Broadway 2017</span>
               <a href="">Home</a>
         <a href="">About</a>
         <a href="">Work</a>
