--- a/index.html
+++ b/index.html
@@ -14,12 +14,15 @@
         <a href="">Contact</a>
     </header>
       <h2>Our Process</h2>
-        <h3>Identity</h3>
-          <p>We focus on the most important details.</p>
-        <h3>Understand</h3>
-          <p>We study our projects inside and out.</p>
-        <h3>Execute</h3>
-          <p>We put everything we have into our work.</p>
+        <img src="./resources/images/identify.svg">
+          <h3>Identity</h3>
+            <p>We focus on the most important details.</p>
+        <img src="./resources/images/execute.svg">
+          <h3>Understand</h3>
+            <p>We study our projects inside and out.</p>
+        <img src="./resources/images/understand.svg">
+          <h3>Execute</h3>
+            <p>We put everything we have into our work.</p>
     <div class="bg-img"><h2>Design in New York</h2></div>
         <h3>Portfolio</h3>
            <p>Coming Soon</p>
