added index and css

--- a/index.html
+++ b/index.html
@@ -7,37 +7,46 @@
   <body>
     <header class="bg-img">
       <h1>Broadway Design</h1>
-        <a href="">Home</a><br/><br/>
-        <a href="">About</a><br/><br/>
-        <a href="">Work</a><br/><br/>
-        <a href="">Team</a><br/><br/>
-        <a href="">Contact</a>
+        <a href="index.html">Home</a><br/><br/>
+        <a href="#about">About</a><br/><br/>
+        <a href="#work">Work</a><br/><br/>
+        <a href="#team">Team</a><br/><br/>
+        <a href="#contact">Contact</a>
     </header>
+    <div id="about">
       <h2>Our Process</h2>
-        <img src="./resources/images/identify.svg">
-          <h3>Identity</h3>
-            <p>We focus on the most important details.</p>
-        <img src="./resources/images/execute.svg">
-          <h3>Understand</h3>
-            <p>We study our projects inside and out.</p>
-        <img src="./resources/images/understand.svg">
-          <h3>Execute</h3>
-            <p>We put everything we have into our work.</p>
-    <div class="bg-img"><h2>Design in New York</h2></div>
-        <h3>Portfolio</h3>
-           <p>Coming Soon</p>
-        <h3>Team</h3>
-          <p>We're Hiring</p>
-        <h3>Contact</h3>
-          <p>Phone: (555)-555-5555<br/>E-mail: test@example.com<br/>Twitter: @test</p>
-    <footer>
-      <p><span id="copyright">&copy; Broadway 2017</span>
-              <a href="">Home</a>
-        <a href="">About</a>
-        <a href="">Work</a>
-        <a href="">Team</a>
-        <a href="">Contact</a>
+          <img src="./resources/images/identify.svg">
+            <h3>Identity</h3>
+              <p>We focus on the most important details.</p>
+          <img src="./resources/images/understand.svg">
+            <h3>Understand</h3>
+              <p>We study our projects inside and out.</p>
+          <img src="./resources/images/execute.svg">
+            <h3>Execute</h3>
+              <p>We put everything we have into our work.</p>
+      </div>
+      <div class="bg-img">
+        <h2>Design in New York</h2>
+      </div>
+        <div id="work">
+          <h3>Portfolio</h3>
+             <p>Coming Soon</p>
+        </div>
+        <div id="portfolio">
+          <h3>Team</h3>
+            <p>We're Hiring</p>
+        </div>
+        <div id="contact">
+          <h3>Contact</h3>
+        </div>
+            <p>Phone: (555)-555-5555<br/><br/>E-mail: test@example.com<br/><br/>Twitter: @test</p>
+     <footer>
+        <p><span id="copyright">&copy; Broadway 2017</span>
+          <a href="index.html">Home</a>
+          <a href="#about">About</a>
+          <a href="#work">Work</a>
+          <a href="#team">Team</a>
+          <a href="#contact">Contact</a>
     </footer>
-
   </body>
 </html>
